holding page structure

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+	<%= img_tag "" %>
+	<div class="banner-content text-center">
+		<h1>We Reiew.</h1>
+		<h1>We Advise.</h1>
+		<h1>We Guide.</h1>
+	</div>
+</div>
+<div class="intro-para">
+	<h3>Advising charities on investment management</h3>
+	<p><strong>Portfolio Manager Consultancy Ltd. (PMCL)</strong> is a consultancy business established by Edward Jewson to advise charities on their investment management. We are currently preparing to launch the business. You will find more information about us on this website in a few weeks.<br></br>Thank you!</p>
+</div>
+<div class="contact-details">
+	<h4>CONTACT</h4>
+	<p>Phone: +44 (0) 20 7866 2534</p>
+	<p>Email: <%= link_to "info@pmclconsulting.com", "mailto:info@pmclconsulting.com" %></p>
+</div>
