--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,131 +1,163 @@
-/* Main class */
-.navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
-  transition: all 0.3s ease;
-  display: flex;
-  height: 70px;
-  padding: 0px 30px;
-  align-items: center;
-  justify-content: space-between;
+.navbar-pmcl {
+  padding: 0px 60px;
+  background-color: white;
+  border-color: transparent;
+  height: 120px;
+  border-bottom: 0.5px solid white;
+  position: relative;
+  max-width: 100%;
 }
-
-/* Optional class to fix the navbar on top */
-.navbar-wagon-fixed {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  z-index: 1;
-  width: 100%;
+#navbar-background {
+  background-color: black;
 }
 
 /* Navbar logo */
-.navbar-wagon-brand img {
-  width: 50px;
+.navbar-pmcl-brand img {
+    height: 92px;
+    position: absolute;
+    top: 16px;
+    left: 38px;
 }
 
-/* Navbar right section (with form, links, button) */
-.navbar-wagon-right {
+/* Navbar main section (with form, links, button) */
+.navbar-pmcl-main {
+  position: absolute;
+  top: 65px;
+  right: 38px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
-
-/* Navbar item */
-.navbar-wagon-item {
-  flex: 0 1 auto;
-  cursor: pointer;
-  padding: 0 20px;
+.navbar-pmcl-link {
+  h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  a {
+    color: #EC3330;
+    font-size: 12px;
+    padding: 0 10px;
+    letter-spacing: 2px;
+    line-height: 0.5px;
+  }
+  a:hover {
+    text-decoration: none;
+  }
 }
-
-/* Navbar standard link */
-.navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
+.navbar-pmcl-link:hover {
+  color: #EC3330;
+  opacity: 0.7;
   text-decoration: none;
 }
-
-/* Navbar right button */
-.navbar-wagon-button {
-  margin-left: 10px;
-  padding: 0 20px;
-  border-radius: 20em;
-  line-height: 40px;
-  background-color: #D23333;
-  color: white;
-  font-size: 14px;
-  border: 2px solid #D23333;
-}
-.navbar-wagon-button:hover {
-  color: white;
-  background: #D23333;
-  border-color: #ac2626;
-}
-
-/* Navbar search form */
-.navbar-wagon-search {
-  flex: 0 1 300px;
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 10px;
-  position: relative;
-}
-.navbar-wagon-search-btn {
-  line-height: 40px;
-  color: #E6E6E6;
-  border: none;
-  background: transparent;
+.social-links {
   position: absolute;
-  right: 14px;
-  top: -2px;
-  z-index: 1;
+  top: 24px;
+  right: 50px;
+  display: flex;
 }
-.navbar-wagon-search-input {
-  flex: 0 1 300px;
-  transition: all 0.15s ease;
-  line-height: 40px;
+.social-link {
+  color: grey;
+  font-size: 16px;
+  padding: 0 5px;
   font-weight: lighter;
-  color: #666666;
-  border: 1px solid #E6E6E6;
-  border-radius: 5px;
-  padding: 0 10px;
-  font-size: 14px;
-  outline: none;
+  letter-spacing: 2px;
+  line-height: 0.5px;
 }
-.navbar-wagon-search-input:focus  {
-  border: 1px solid #CCCCCC;
+.social-link:hover {
+  text-decoration: none;
+  color: grey;
+  opacity: 0.5;
 }
 
 /* Navbar dropdown menu */
-.navbar-wagon-dropdown-menu {
+.navbar-pmcl-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
+  box-shadow: 1px 1px 4px white;
   border-color: #E6E6E6;
+  z-index: 5000 !important;
 }
-.navbar-wagon-dropdown-menu li > a {
+.navbar-pmcl-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: white !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
 }
-.navbar-wagon-dropdown-menu li > a:hover {
+.navbar-pmcl-dropdown-menu li > a:hover {
   background: transparent !important;
   color: black !important;
 }
-.navbar-wagon-dropdown-menu:before {
+.navbar-pmcl-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
-  position: absolute;
-  right: 10px;
-  top: -6px;
   background-color: white;
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+.fa-navicon:before, .fa-reorder:before, .fa-bars:before {
+  position: absolute;
+  right: 10px;
+  top: 25px;
+}
+.dropdown-toggle-black {
+  color: black;
+}
+.dropdown {
+  font-size: 25px;
+}
+.dropdown a {
+  text-decoration: none;
+}
+.dropdown.open a {
+  text-decoration: none;
+}
+.dropdown-toggle-black a {
+  color: black;
+}
+// On scroll only
+.navbar-pmcl-scroll {
+  display: flex;
+  height: 70px;
+  padding: 0px 60px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  opacity: 0.8;
+  box-shadow: 1px 1px 1px #D9D9D9;
+}
+.navbar-pmcl-link-scroll {
+  color: #565656;
+  font-size: 14px;
+  font-weight: lighter;
+  padding: 0 10px;
+  letter-spacing: 2px;
+  line-height: 0.5px;
+}
+.navbar-pmcl-link-scroll:hover {
+  color: #8FF0E8;
+  text-decoration: none;
+}
+.dropdown-menu { 
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #fff;
+  text-align: center;
+  right: 6px;
+  li > a {
+    font-weight: 600px;
+    padding: 10px 10vw;
+  }
+}
+@media only screen and (max-width: 452px) {
+  .navbar-pmcl-main {
+    position: absolute;
+    top: 95px;
+    left: 33px;
+  }
+  .navbar-pmcl-brand img {
+    height: 76px;
+  }
 }
