--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,76 +1,43 @@
-<div class="navbar-wagon">
+<div class="navbar-pmcl navbar-pmcl-fixed">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo.png" %>
+  <%= link_to root_path, class: "navbar-pmcl-brand" do %>
+    <%= image_tag "PMCL_Logo.png" %>
   <% end %>
 
-  <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
+  <!-- main Navigation -->
+  <div class="navbar-pmcl-main">
 
-    <!-- Search form -->
-    <form action="" class="navbar-wagon-search">
-      <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
-      <button type="submit" class="navbar-wagon-search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-    </form>
-
-    <!-- Different navigation if login or not -->
-    <% if user_signed_in? %>
-
-      <!-- Notification -->
-      <%= link_to "#", class: "navbar-wagon-item navbar-wagon-link" do %>
-        <div class="badge-container">
-          <i class="fa fa-envelope-o"></i>
-          <div class="badge badge-blue">3</div>
-        </div>
-      <% end %>
-
-      <!-- Profile picture and dropdown -->
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-          <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-    <% else %>
-
-      <!-- Login text link -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-
-    <% end %>
-
-    <!-- Button (call-to-action) -->
-    <%= link_to t(".top_call_to_action", default: "Post stuff"), "#", class: "navbar-wagon-item navbar-wagon-button btn" %>
+<!-- Navbar menu -->
+    <!-- Contact link -->
+    <h4 class="navbar-pmcl-link"><a href="tel:+44-203-488-1184">+44(0) 20 3488 1184</a></h4>
+   
   </div>
+  <!-- Social links -->
+    <div class="social-links hidden">
+      <p><%= link_to "https://www.instagram.com/bespokemetalstudio/", class: "social-link", target: "blank" do %>
+         <i class="fa fa-instagram"></i>
+         <% end %></p>
+      <p><%= link_to "https://uk.pinterest.com/bespokemetal/", class: "social-link", target: "blank" do %>
+        <i class="fa fa-pinterest"></i>
+        <% end %>
+      </p> 
+    </div>  
 
   <!-- Dropdown list appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+  <div class="navbar-pmcl-item hidden">
+      <div class="dropdown dropdown-toggle-black"> 
+        <a class="fa fa-bars dropdown-toggle" data-toggle="dropdown" href="#"></a>
+        <ul class="dropdown-menu dropdown-menu-main .navbar-pmcl-dropdown-menu">
+        <li><%= link_to "ABOUT US", "", class: "navbar-pmcl-link" %></li>  
+        <li><%= link_to "PRODUCTS", "", class: "navbar-pmcl-link" %></li>  
+        <li><%= link_to "SERVICES", "", class: "navbar-pmcl-link" %></li>  
+        <li><%= link_to "THE TEAM", "", class: "navbar-pmcl-link" %></li>  
+        <li><%= link_to "CONTACT", "", class: "navbar-pmcl-link" %></li>
+        <li><%= link_to "INSTAGRAM", "https://www.instagram.com/bespokemetalstudio/", class: "navbar-pmcl-link", target: "blank" %></li>  
+        <li><%= link_to "PINTEREST", "https://uk.pinterest.com/bespokemetal/", class: "navbar-pmcl-link", target: "blank" %></li>
       </ul>
     </div>
   </div>
 </div>
+
 
