--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,22 @@
-<div class="banner">
-	<div class="banner-content">
-		<h1>We Review.</h1>
-		<h1>We Advise.</h1>
-		<h1><span>We Guide.</span></h1>
-	</div>
-</div>
-<div class="page-content">
-	<div class="intro-para">
-		<h2>Advising charities on investment management</h2>
-		<p><strong>Portfolio Manager Consultancy Ltd. (PMCL)</strong> is a consultancy business established by Edward Jewson to advise charities on their investment management. We are currently preparing to launch the business. You will find more information about us on this website in a few weeks.<br></br>Thank you!</p>
-	</div>
-	<div class="contact-details">
-		<h6>CONTACT</h6>
-		<p><span>Phone:</span><br>+44 (0) 20 7866 2534</p>
-		<p><span>Email:</span><br><%= link_to "info@pmclconsulting.com", "mailto:info@pmclconsulting.com" %></p>
+<div class="wrapper">
+	<div class="container">
+		<div class="banner">
+			<div class="banner-content">
+				<h1>We Review.</h1>
+				<h1>We Advise.</h1>
+				<h1><span>We Guide.</span></h1>
+			</div>
+		</div>
+		<div class="page-content">
+			<div class="intro-para">
+				<h2>Advising charities on investment management</h2>
+				<p><strong>Portfolio Manager Consultancy Ltd. (PMCL)</strong> is a consultancy business established by Edward Jewson to advise charities on their investment management. We are currently preparing to launch the business. You will find more information about us on this website in a few weeks.<br></br>Thank you!</p>
+			</div>
+			<div class="contact-details">
+				<h6>CONTACT</h6>
+				<p><span>Phone:</span><br>+44 (0) 20 7866 2534</p>
+				<p><span>Email:</span><br><%= link_to "info@pmclconsulting.com", "mailto:info@pmclconsulting.com" %></p>
+			</div>
+		</div>
 	</div>
 </div>
