--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -36,7 +36,7 @@
   a {
     color: #EC3330;
     font-size: 12px;
-    padding: 0 10px;
+    padding: 0 0;
     letter-spacing: 2px;
     line-height: 0.5px;
   }
