--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,5 @@
+<div class="wrapper">
+<div class="container">
 <div class="navbar-pmcl navbar-pmcl-fixed">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-pmcl-brand" do %>
@@ -39,5 +41,6 @@
     </div>
   </div>
 </div>
-
+</div>
+</div>
 
