--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,9 @@
 .wrapper {
 	background-color: #f1f1f1;
 }
+.container {
+	background-color: white;
+}
 .page-content {
 	display: flex;
 	justify-content: space-around;
