--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,7 @@
   background-image: url('http://res.cloudinary.com/dqxvcdy6w/image/upload/v1499769329/PMCL_Banner_ndkf8f.png');
   color: white;
   text-align: center;
-  height: 60vh;
+  height: 400px;
   max-width: 100%;
   background-size: cover !important;
   display: flex;
