--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 			</div>
 			<div class="contact-details">
 				<h6>CONTACT</h6>
-				<p><span>Phone:</span><br>+44 (0) 20 7866 2534</p>
+				<p><span>Phone:</span><br><a href="tel:+44-203-488-1184">+44 (0) 20 7866 2534</a></p>
 				<p><span>Email:</span><br><%= link_to "info@pmclconsulting.com", "mailto:info@pmclconsulting.com" %></p>
 			</div>
 		</div>
