logo and banner fix

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
 <div class="navbar-pmcl navbar-pmcl-fixed">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-pmcl-brand" do %>
-    <%= image_tag "PMCL_Logo.png" %>
+    <%= image_tag "PMCL.png" %>
   <% end %>
 
   <!-- main Navigation -->
